@@ -40,6 +40,13 @@
 	</ul>
   </p>
 
+<H4>Street Map</H4>
+  <p>
+    <i>OpenStreetMap</i><br>
+    The street maps used in Marble via download are provided by the <a href="http://www.openstreetmap.org">OpenStreetMap</a> Project ("OSM"). OSM is an open community which creates free editable maps.
+    <i>License</i>: OpenStreetMap data can be used freely under the terms of the <a href="http://wiki.openstreetmap.org/index.php/OpenStreetMap_License">Creative Commons Attribution-ShareAlike 2.0 license</a>.
+  </p>
+
 <H4>Cities and Locations</H4>
   <p>
     <i>World Gazetteer</i><br> 
@@ -65,5 +72,6 @@
     Astronomical Data Center, NSSDC/ADC (1991) 
     <a href="http://adc.gsfc.nasa.gov/adc-cgi/cat.pl?/catalogs/5/5050">http://adc.gsfc.nasa.gov</a>
   </p>
+
 <br>
 </body>
