@@ -1,3 +1,10 @@
+2008-05-22  Torsten Rahn  <rahn@kde.org> 
+
+    * data/credits_data.html:
+
+    - Give a minimum of attribution to OSM (more prominent 
+      attribution yet to come).
+
 2008-05-22  Patrick Spendrin  <ps_ml@gmx.de>
 
     * src/lib/geodata/handlers/kml/KMLColorModeTagHandler{.h,.cpp}
